<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_movies"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/colorSecondary"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="122dp"
            android:layout_height="168dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_title"
            style="@style/textViews"
            android:fontFamily="@font/anton"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_item_genre"
            style="@style/textView"
            android:textColor="@color/colorTextTertiary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_item_title"
            tools:text="@string/genre" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_item_rating"
            style="@style/textView"
            android:layout_marginStart="0dp"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/star"
            app:layout_constraintStart_toEndOf="@id/star"
            app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/rating"
            style="@style/textView"
            android:layout_marginStart="0dp"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_rating"
            app:layout_constraintStart_toEndOf="@id/tv_item_rating"
            app:layout_constraintTop_toTopOf="@id/tv_item_rating"
            app:layout_constraintVertical_bias="1.0"
            android:text="@string/rating_small" />

        <TextView
            android:id="@+id/tv_item_country"
            style="@style/textViews"
            android:fontFamily="@font/anton"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toTopOf="@+id/rating"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/country" />

        <TextView
            android:id="@+id/tv_item_description"
            style="@style/textView"
            android:maxLines="2"
            android:textColor="@color/colorTextTertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/star"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/stars"
            style="@style/textView"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_item_description"
            android:text="@string/stars" />

        <TextView
            android:id="@+id/tv_item_stars"
            style="@style/textView"
            android:layout_marginTop="0dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/stars"
            app:layout_constraintStart_toEndOf="@+id/stars"
            app:layout_constraintTop_toTopOf="@id/stars"
            tools:text="@string/stars_name" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>