<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context="com.fauzan.notflixmovie.ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collaps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@null"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@drawable/thumbnail"
                android:contentDescription="@string/thumbnail" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="18dp">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="122dp"
                android:layout_height="168dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_poster" />

            <TextView
                android:id="@+id/tv_item_title"
                style="@style/textViews"
                android:layout_toEndOf="@id/image_poster"
                android:fontFamily="@font/anton"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/image_poster"
                app:layout_constraintTop_toTopOf="@+id/image_poster"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_item_genre"
                style="@style/textView"
                android:textColor="@color/colorTextTertiary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_poster"
                app:layout_constraintTop_toBottomOf="@id/tv_item_title"
                tools:text="@string/genre" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toEndOf="@id/image_poster"
                app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_item_rating"
                style="@style/textView"
                android:layout_marginStart="0dp"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/star"
                app:layout_constraintStart_toEndOf="@id/star"
                app:layout_constraintTop_toBottomOf="@id/tv_item_genre"
                tools:text="@string/rating" />

            <TextView
                android:id="@+id/rating"
                style="@style/textView"
                android:layout_marginStart="0dp"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_item_rating"
                app:layout_constraintStart_toEndOf="@id/tv_item_rating"
                app:layout_constraintTop_toTopOf="@id/tv_item_rating"
                app:layout_constraintVertical_bias="1.0"
                android:text="@string/rating_small" />

            <TextView
                android:id="@+id/tv_item_country"
                style="@style/textViews"
                android:fontFamily="@font/anton"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/rating"
                app:layout_constraintVertical_bias="1.0"
                tools:text="@string/country" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sarala"
                android:textColor="@color/colorTextTertiary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/image_poster"
                app:layout_constraintStart_toStartOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@id/image_poster"
                tools:text="@string/description" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorTextTertiary"
                app:layout_constraintEnd_toEndOf="@+id/tv_item_description"
                app:layout_constraintStart_toStartOf="@+id/tv_item_description"
                app:layout_constraintTop_toBottomOf="@id/tv_item_description" />

            <TextView
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sarala"
                android:text="@string/stars"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/line"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/line"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_item_stars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sarala"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/stars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/stars"
                app:layout_constraintTop_toTopOf="@id/stars"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/stars_name" />

            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sarala"
                android:text="@string/tagline"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/stars"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/stars"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_stars" />

            <TextView
                android:id="@+id/tv_item_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sarala"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tagline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tagline"
                app:layout_constraintTop_toTopOf="@id/tagline"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/stars_name" />

            <TextView
                android:id="@+id/creators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sarala"
                android:text="@string/creators"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tagline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/tagline"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_tagline" />

            <TextView
                android:id="@+id/tv_item_creators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/sarala"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/creators"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/creators"
                app:layout_constraintTop_toTopOf="@id/creators"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/stars_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>